k3s/certificates/referenceservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: expose-service
  namespace: cert-manager
spec:
  type: ExternalName
  externalName: service.namespace.svc.cluster.local
