k3s/certificates/dummy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-ingress
  namespace: cert-manager
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.spypahtest.duckdns.org"
    - "spypahtest.duckdns.org"
    secretName: spypahtest.duckdns.org-tls
  rules:
  - host: "*.spypahtest.duckdns.org"
